fixed height issues and spacing issues in video playlist.

--- a/web/less/video-playlist.less
+++ b/web/less/video-playlist.less
@@ -3,7 +3,7 @@
 .videoPlaylist {
     box-sizing: content-box;
     position: fixed;
-    height: 100%;
+    height: inherit;
     right: 0;
     padding-left: @playlistPadding;
     overflow-y: auto;
@@ -19,12 +19,15 @@
         list-style: none;
         cursor: pointer;
 
-        &:not(:first-child) {
-            margin-top: 10px;
+       margin-top: 10px;
+
+        &:last-child {
+            margin-bottom: 10px;
         }
 
         img {
             max-width: 100%;
+            vertical-align: middle;
         }
     }
 }
